--- a/events/templates/my_events.html
+++ b/events/templates/my_events.html
@@ -17,7 +17,7 @@
     {% include 'sidebar.html' %}
 
     <!-- Contenido Principal -->
-    <main class="py-5">
+    <main class="container-fluid">
         <div class="container-fluid">
             <!-- Barra de Filtros (igual que en events.html) -->
             <div class="bg-dark bg-opacity-50 border-top border-bottom border-secondary border-opacity-25 py-3 mb-5">
